[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/points/point generator.gd" type="Script" id=1]

[node name="point generator" type="Node2D"]
script = ExtResource( 1 )

[node name="pos_point_1" type="Position2D" parent="."]
position = Vector2( 64, -64 )

[node name="pos_point_2" type="Position2D" parent="."]
position = Vector2( 128, -64 )

[node name="pos_point_3" type="Position2D" parent="."]
position = Vector2( 192, -64 )

[node name="pos_point_4" type="Position2D" parent="."]
position = Vector2( 256, -64 )

[node name="spawn" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="spawn speed" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="velocity" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="spawn" to="." method="_on_spawn_timeout"]
[connection signal="timeout" from="spawn speed" to="." method="_on_spawn_speed_timeout"]
[connection signal="timeout" from="velocity" to="." method="_on_velocity_timeout"]
